Front page style fix and admin skeleton

--- a/src/app/front/pages/home/home.component.html
+++ b/src/app/front/pages/home/home.component.html
@@ -7,7 +7,7 @@
 		<store-filter> </store-filter>
 		<store-grid> </store-grid>
 	</div>
-	<collaboration-panel> </collaboration-panel>
+	<collaborator-panel> </collaborator-panel>
 	<action-panel> </action-panel>
 	<partner-panel> </partner-panel>
 </div>
