--- a/src/app/front/partials/action-panel/action-panel.component.scss
+++ b/src/app/front/partials/action-panel/action-panel.component.scss
@@ -2,14 +2,6 @@ h3, p {
 	color: #000;
 }
 
-.mat-icon {
-	vertical-align: middle;
-}
-
-.mat-button {
-	text-transform: uppercase;
-}
-
 .mat-raised-button {
 	text-transform: uppercase;
 	padding: 0px 10px;
@@ -22,16 +14,21 @@ form .mat-input-container {
 
 .mat-list {
 	.mat-icon {
+		vertical-align: middle;
 		margin-right: 30px;
 	}
-	.mat-list-item .mat-button {
-		width: 100%;
-		height: 100%;
-		vertical-align: middle;
-		text-align: left;
-		p {
-			display: inline-block;
-			margin: 0px;
+
+	.mat-list-item {
+		color: #000;
+
+		.mat-button {
+			vertical-align: middle;
+			text-transform: uppercase;
+			text-align: left;
+
+			p {
+				margin: 0px;
+			}
 		}
 	}
 }
