--- a/src/app/front/partials/slideshow/slideshow.component.html
+++ b/src/app/front/partials/slideshow/slideshow.component.html
@@ -1,7 +1,7 @@
 <md-tab-group fxLayout="column" fxLayoutAlign="end center" headerPosition="below" [selectedIndex]="selectedTab" (selectChange)="selectChange($event)">
-	<md-tab> <div class="slideshow-image" style="background-image: url(assets/img/banner1.jpg)"> </div> </md-tab>
-	<md-tab> <div class="slideshow-image" style="background-image: url(assets/img/banner2.jpg)"> </div> </md-tab>
-	<md-tab> <div class="slideshow-image" style="background-image: url(assets/img/banner3.jpg)"> </div> </md-tab>
-	<md-tab> <div class="slideshow-image" style="background-image: url(assets/img/banner4.jpg)"> </div> </md-tab>
-	<md-tab> <div class="slideshow-image" style="background-image: url(assets/img/banner5.jpg)"> </div> </md-tab>
+	<md-tab> <div class="slideshow-image full-size" style="background-image: url(assets/img/banner1.jpg)"> </div> </md-tab>
+	<md-tab> <div class="slideshow-image full-size" style="background-image: url(assets/img/banner2.jpg)"> </div> </md-tab>
+	<md-tab> <div class="slideshow-image full-size" style="background-image: url(assets/img/banner3.jpg)"> </div> </md-tab>
+	<md-tab> <div class="slideshow-image full-size" style="background-image: url(assets/img/banner4.jpg)"> </div> </md-tab>
+	<md-tab> <div class="slideshow-image full-size" style="background-image: url(assets/img/banner5.jpg)"> </div> </md-tab>
 </md-tab-group>
