--- a/src/app/front/partials/store-grid/store-grid.component.scss
+++ b/src/app/front/partials/store-grid/store-grid.component.scss
@@ -1,10 +1,47 @@
-.mat-grid-tile-header {
-	text-transform: uppercase;
-}
+store-grid {
+	.mat-tab-group {
+		flex-direction: column-reverse !important;
 
+		.mat-tab-body-wrapper {
+			width: 100%;
+			box-shadow: 0px 0px 5px #000000;
+			padding: 10px;
+		}
 
+		.mat-tab-header .mat-ink-bar {
+			display: none;
+		}
 
-.mat-tab-group {
-	flex-direction: column-reverse !important;
+		.mat-tab-label {
+			width: 50px;
+			height: 50px;
+			padding: 0px;
+			border-radius: 50%;
+			background-color: rgba(0, 0, 0, 0.54);
+			margin: 10px;
+			min-width: initial;
+			opacity: 1;
+			color: rgba(0, 0, 0, 0.87);
+		}
+		.mat-tab-label[aria-selected="true"] {
+			background-color: #009688;
+			color: #fff;
+		}
+		.mat-tab-header-pagination {
+			display: block;
+			margin-top: 27px;
+			margin-left: 15px;
+			div {
+				border-color: rgba(0, 0, 0, 0.87);
+			}
+		}
+		.mat-tab-header-pagination-before {
+			margin-top: 29px;
+		}
+	}
+
+	.mat-grid-tile-header {
+		text-transform: uppercase;
+	}
 }
 
