--- a/src/app/front/pages/home/home.component.html
+++ b/src/app/front/pages/home/home.component.html
@@ -1,13 +1,13 @@
 <div fxLayout="column">
 	<div fxLayout="row">
-		<menu-mega> </menu-mega>
-		<slideshow> </slideshow>
+		<app-menu-mega> </app-menu-mega>
+		<app-slideshow> </app-slideshow>
 	</div>
 	<div fxLayout="column" style="padding: 10px;">
-		<store-filter> </store-filter>
-		<store-grid> </store-grid>
+		<app-store-filter> </app-store-filter>
+		<app-store-grid> </app-store-grid>
 	</div>
-	<collaborator-panel> </collaborator-panel>
-	<action-panel> </action-panel>
-	<partner-panel> </partner-panel>
+	<app-collaborator-panel> </app-collaborator-panel>
+	<app-action-panel> </app-action-panel>
+	<app-partner-panel> </app-partner-panel>
 </div>
