Logo, hamburger and notification bar

--- a/src/app/back/admin/admin.component.html
+++ b/src/app/back/admin/admin.component.html
@@ -1,2 +1,4 @@
-<h1> Admin </h1>
-<router-outlet name="admin"></router-outlet>
+<md-sidenav-container>
+	<admin-header> </admin-header>
+	<router-outlet name="admin"></router-outlet>
+</md-sidenav-container>
