--- a/src/app/back/admin/partials/header/header.component.scss
+++ b/src/app/back/admin/partials/header/header.component.scss
@@ -4,10 +4,11 @@
 		width: 240px;
 		height: 80px;
 		background: #000;
+		position: relative;
+		z-index: 2;
 
 		a.logo {
 			text-decoration: none;
-			height: 80px;
 		}
 	}
 
@@ -16,18 +17,27 @@
 		height: 80px;
 		flex: 1;
 
+		.header-content {
+			justify-content: space-between;
+			width: 100%;
+		}
+
 		.mat-nav-list {
 			padding-top: 0px;
-			margin-left: 15px;
+			margin: 0px 25px;
+
+			.avatar {
+				border-radius: 50%;
+			}
 
 			.badge {
 				position: absolute;
-				top: -10px;
-				right: 0px;
+				top: -5px;
+				right: -5px;
 			}
 
 			.bg-success {
-				background: a9d86e;
+				background: #a9d86e;
 			}
 
 			.bg-important {
@@ -45,11 +55,129 @@
 			.mat-icon-button:hover {
 				background: #1fb5ad;
 			}
+
+			.nav-menu-item {
+				.mat-button .mat-card {
+					width: 150px;
+					i {
+						margin-right: 20px;
+					}
+				}
+
+				button .mat-card {
+					position: absolute;
+					width: 300px;
+					height: initial;
+					display: none;
+
+					.mat-list-item {
+						margin: 10px 0px;
+
+						.alert {
+							margin-bottom: 0px;
+							width: 100%;
+
+							i {
+								margin-right: 20px;
+								font-size: 50px;
+								line-height: 50px;
+							}
+						}
+
+						h5 {
+							color: #32323a;
+							text-transform: uppercase;
+							font-size: 12px;
+							font-weight: 600;
+							margin-bottom: 5px;
+							padding-top: 8px;
+							line-height: 1.1;
+							text-align: left;
+						}
+
+						.from {
+							font-size: 12px;
+							font-weight: 600;
+						}
+
+						.message {
+							font-size: 11px;
+		    				line-height: 1.5;
+						}
+
+						p {
+							margin-bottom: 0px;
+						}
+
+						.photo img {
+							margin-right: 10px;
+							border-radius: 3px;
+						}
+
+						.subject {
+							line-height: 1.5;
+							text-align: left;
+						}
+
+						.task-info {
+							padding: 10px;
+							background: #f6f6f6;
+							width: 100%;
+
+							p {
+								padding-top: 0px;
+								color: #8f8f9b;
+								font-size: 12px;
+								padding: 10px 0px;
+								line-height: 1.1;
+							}
+						}
+
+						.time {
+							font-size: 11px;
+							font-style: italic;
+							font-weight: bold;
+							position: absolute;
+							right: 20px;
+						}
+					}
+				}
+				
+				button.cdk-focused .mat-card {
+					display: block;
+				}
+			}
+
+			.search {
+				width: 20px;
+				background: #fff url(/assets/img/search-icon.png) no-repeat 5px 8px;
+				border: 1px solid #fff;
+				-webkit-transition: all .3s ease;
+				-moz-transition: all .3s ease;
+				-ms-transition: all .3s ease;
+				-o-transition: all .3s ease;
+				transition: all .3s ease;
+				border-radius: 20px;
+				margin-right: 10px;
+			}
+
+			.search:focus {
+				width: 180px;
+				background-color: #f6f6f6;
+				box-shadow: none;
+				color: #c8c8c8;
+				padding: 0px 25px;
+			}
+
+			.username {
+				font-size: 13px;
+			}
 		}
 	}
 
 	.menu {
-		margin-left: -16px;
+		position: absolute;
+		right: -16px;
 		background: #008447;
 		width: 32px;
 		height: 32px;
