--- a/src/app/back/admin/partials/header/header.component.html
+++ b/src/app/back/admin/partials/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="mat-toolbar" fxLayout="row" fxLayoutAlign="start center">
+<div class="mat-toolbar" fxLayout.lg="row" fxLayout.lt-md="column" fxLayoutAlign="start center">
 	<div class="brand" fxLayout="row" fxLayoutAlign="center center">
 		<a [routerLink]="" class="logo">
 			<img src="assets/img/EMHHighQuality.svg" width="180" alt="">
@@ -6,86 +6,88 @@
 		<button md-icon-button class="menu"> <i class="material-icons">menu</i> </button>
 	</div>
 	<md-card fxLayout="row" fxLayoutAlign="start center">
-		<div fxLayout="row" class="header-content">
-			<md-nav-list>
-				<div class="inline nav-menu-item">
-					<button md-icon-button> 
-						<i class="material-icons">list</i>
-						<span class="badge bg-success">8</span>
-						<md-card>
-							<md-list>
-								<md-list-item>
-									<p class="">You have 8 pending tasks</p>
-								</md-list-item>
-								<md-list-item *ngFor="let notification of taskNotifications">
-									<div class="task-info clearfix">
-										<div class="desc pull-left">
-											<h5> {{ notification.title }} </h5>
-											<p> {{ notification.date }} </p>
+		<div fxLayout.gt-sm="row" fxLayout.xs="column" class="header-content">
+			<md-nav-list fxLayout="row" fxLayoutAlign.gt-sm="start center" fxLayoutAlign.xs="start end">
+				<div fxLayout="row" fxLayoutAlign="start center">
+					<div class="inline nav-menu-item">
+						<button md-icon-button> 
+							<i class="material-icons">list</i>
+							<span class="badge bg-success">8</span>
+							<md-card>
+								<md-list>
+									<md-list-item>
+										<p class="">You have 8 pending tasks</p>
+									</md-list-item>
+									<md-list-item *ngFor="let notification of taskNotifications">
+										<div class="task-info clearfix">
+											<div class="desc pull-left">
+												<h5> {{ notification.title }} </h5>
+												<p> {{ notification.date }} </p>
+											</div>
+											<span class="notification-pie-chart pull-right" data-percent="45">
+												<span class="percent"> </span>
+											</span>
 										</div>
-										<span class="notification-pie-chart pull-right" data-percent="45">
-											<span class="percent"> </span>
-										</span>
-									</div>
-								</md-list-item>
-								<md-list-item>
-									<a href="">See All Tasks</a>
-								</md-list-item>
-							</md-list>
-						</md-card>
-					</button>
-				</div>
-				<div class="inline nav-menu-item">
-					<button md-icon-button> 
-						<i class="material-icons">mail_outline</i>
-						<span class="badge bg-important">4</span>
-						<md-card>
-							<md-list>
-								<md-list-item> 
-									<p class="red">You have 4 Mails</p> 
-								</md-list-item>
-								<md-list-item *ngFor="let notification of mailNotifications">
-									<span class="photo"><img alt="avatar" src="{{ notification.avatar }}"></span>
-									<div fxLayout="column">
-										<span class="subject">
-											<span class="from"> {{ notification.from }} </span>
-											<span class="time"> {{ notification.time }} </span>
-										</span>
-										<span class="message">
-											{{ notification.message }}
-										</span>
-									</div>
-								</md-list-item>
-								<md-list-item>
-									<p>See all messages</p>
-								</md-list-item>
-							</md-list>
-						</md-card>
-					</button>
-				</div>
-				<div class="inline nav-menu-item">
-					<button md-icon-button> 
-						<i class="material-icons">notifications_none</i> 
-						<span class="badge bg-warning">3</span>
-						<md-card>
-							<md-list>
-								<md-list-item>
-									<p> Notifications </p>
-								</md-list-item>
-								<md-list-item *ngFor="let i of [1, 2, 3]">
-									<div class="alert alert-info clearfix" fxLayout="row" fxLayoutAlign="start center">
-										<i class="material-icons">info</i>
-										<div class="noti-info">
-											<span> Server #{{i}} overloaded. </span>
+									</md-list-item>
+									<md-list-item>
+										<a href="">See All Tasks</a>
+									</md-list-item>
+								</md-list>
+							</md-card>
+						</button>
+					</div>
+					<div class="inline nav-menu-item">
+						<button md-icon-button> 
+							<i class="material-icons">mail_outline</i>
+							<span class="badge bg-important">4</span>
+							<md-card>
+								<md-list>
+									<md-list-item> 
+										<p class="red">You have 4 Mails</p> 
+									</md-list-item>
+									<md-list-item *ngFor="let notification of mailNotifications">
+										<span class="photo"><img alt="avatar" src="{{ notification.avatar }}"></span>
+										<div fxLayout="column">
+											<span class="subject">
+												<span class="from"> {{ notification.from }} </span>
+												<span class="time"> {{ notification.time }} </span>
+											</span>
+											<span class="message">
+												{{ notification.message }}
+											</span>
 										</div>
-									</div>
-								</md-list-item>
-							</md-list>
-						</md-card>
-					</button>
+									</md-list-item>
+									<md-list-item>
+										<p>See all messages</p>
+									</md-list-item>
+								</md-list>
+							</md-card>
+						</button>
+					</div>
+					<div class="inline nav-menu-item">
+						<button md-icon-button> 
+							<i class="material-icons">notifications_none</i> 
+							<span class="badge bg-warning">3</span>
+							<md-card>
+								<md-list>
+									<md-list-item>
+										<p> Notifications </p>
+									</md-list-item>
+									<md-list-item *ngFor="let i of [1, 2, 3]">
+										<div class="alert alert-info clearfix" fxLayout="row" fxLayoutAlign="start center">
+											<i class="material-icons">info</i>
+											<div class="noti-info">
+												<span> Server #{{i}} overloaded. </span>
+											</div>
+										</div>
+									</md-list-item>
+								</md-list>
+							</md-card>
+						</button>
+					</div>
 				</div>
 			</md-nav-list>
-			<md-nav-list class="inline">
+			<md-nav-list class="inline" fxLayout="row" fxLayoutAlign.gt-sm="start center" fxLayoutAlign.xs="end end">
 				<div fxLayout="row" fxLayoutAlign="start center" class="inline nav-menu-item">
 					<input type="text" class="form-control search" placeholder="Search">
 					<button md-button>
