--- a/src/app/back/admin/partials/header/header.component.scss
+++ b/src/app/back/admin/partials/header/header.component.scss
@@ -80,6 +80,7 @@
 					width: 300px;
 					height: initial;
 					display: none;
+					z-index: 1000;
 
 					.mat-list-item {
 						margin: 10px 0px;
