--- a/src/app/back/admin/admin.component.scss
+++ b/src/app/back/admin/admin.component.scss
@@ -1,3 +1,22 @@
-.mat-sidenav-container {
-	height: 100%;
+admin {
+	#leftSideNavContainer {
+		height: calc(100% - 80px);
+	}
+
+	.mat-sidenav-container {
+		height: 100%;
+		background: none;
+
+		.mat-sidenav.mat-sidenav-opened {
+			box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);
+		}
+	}
+
+	.sidenav {
+		width: 240px;
+	}
+
+	.sidenav-button {
+		display: none;
+	}	
 }
