--- a/src/app/back/admin/partials/sidenav/left/left.component.html
+++ b/src/app/back/admin/partials/sidenav/left/left.component.html
@@ -1,6 +1,6 @@
 <md-list>
-	<md-list-item *ngFor="let item of menuItems" (click)="toggleMenuItem($event, item)">
-		<button md-button class="full-size">
+	<md-list-item *ngFor="let item of menuItems">
+		<button md-button class="full-size menu-button" (click)="toggleMenuItem($event, item)">
 			<p class="button-content inline">
 				<md-icon> {{ item.icon }} </md-icon>
 				{{ item.text }}
@@ -8,12 +8,12 @@
 			<md-icon class="arrow-right" *ngIf="item.subMenuItems">keyboard_arrow_right</md-icon>
 			<md-icon class="arrow-down" *ngIf="item.subMenuItems">keyboard_arrow_down</md-icon>
 		</button>
-		<!-- <md-list *ngIf="item.subMenuItems">
+		<md-list *ngIf="item.subMenuItems" class="full-width sub-menu">
 			<md-list-item *ngFor="let subItem of item.subMenuItems">
-				<button md-button class="full-size">
+				<button md-button class="full-size" (click)="toggleSubMenuItem($event)">
 					{{ subItem }}
 				</button>
 			</md-list-item>
-		</md-list> -->
+		</md-list>
 	</md-list-item>
 </md-list>
